fix: resolve build issues from modularization
- Fixed visibility modifiers for Cache components (public access)
- Updated project.yml to include new directories (Cache, Camera, etc)
- Renamed conflicting DetailRow to ScanDetailRow in barcode scanner
- Removed unused DependencyKeys.swift that was causing build errors
- Added Services subdirectories to project configuration

Note: Some Swift 6 concurrency issues remain to be fixed

--- a/project.yml
+++ b/project.yml
@@ -43,8 +43,14 @@ targets:
       - path: Foundation/Core
       - path: Foundation/Utils
       - path: Infrastructure/Storage
+      - path: Infrastructure/Cache
+      - path: Infrastructure/Camera
       - path: Infrastructure/Security
       - path: Services
+      - path: Services/CloudBackup
+      - path: Services/InsuranceExport
+      - path: Services/InsuranceReport
+      - path: Services/ReceiptOCR
       - path: UI/UI-Core
       - path: UI/UI-Components
       - path: Config/FeatureFlags.swift
