feat: add InjectionNext hot reload support
- Add InjectionNext and Inject Swift packages
- Configure EMIT_FRONTEND_COMMAND_LINES for Xcode 16.3+
- Add injection trigger for SwiftUI view refresh
- Create setup script and documentation
- Update .gitignore for hot reload artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,8 @@ local/
 private/
 secrets/.build_counter
 frustratingResults.jpg
+
+# Hot Reload
+tools/dev/InjectionIII.app/
+.build_counter
+.claude/.xcode-last-regen
