--- a/project.yml
+++ b/project.yml
@@ -26,6 +26,22 @@ settings:
     CODE_SIGN_STYLE: Automatic
     CURRENT_PROJECT_VERSION: 1
     MARKETING_VERSION: 1.0.0
+  configs:
+    Debug:
+      SWIFT_STRICT_CONCURRENCY: minimal
+      SWIFT_TREAT_WARNINGS_AS_ERRORS: NO
+      OTHER_SWIFT_FLAGS: "-Xfrontend -disable-availability-checking -suppress-warnings"
+      EMIT_FRONTEND_COMMAND_LINES: YES
+    Release:
+      SWIFT_STRICT_CONCURRENCY: complete
+
+packages:
+  Inject:
+    url: https://github.com/krzysztofzablocki/Inject
+    from: 1.5.2
+  InjectionNext:
+    url: https://github.com/johnno1962/InjectionNext
+    from: 1.0.0
 
 targets:
   Nestory:
@@ -65,10 +81,17 @@ targets:
         INFOPLIST_FILE: App-Main/Info.plist
         ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
         ENABLE_PREVIEWS: YES
+        SWIFT_UPCOMING_FEATURE_CONCURRENCY: YES
+        SWIFT_UPCOMING_FEATURE_EXISTENTIAL_ANY: YES
+        OTHER_LDFLAGS: -Xlinker -interposable
         
     dependencies:
       - sdk: SwiftData.framework
       - sdk: CloudKit.framework
+      - package: Inject
+        product: Inject
+      - package: InjectionNext
+        product: InjectionNext
 
 schemes:
   Nestory-Dev:
@@ -79,6 +102,7 @@ schemes:
       config: Debug
       environmentVariables:
         CLOUDKIT_CONTAINER: iCloud.com.nestory.app.dev
+        INJECTION_DIRECTORIES: /Users/griffin/Projects/Nestory
     test:
       config: Debug
     profile:
