fix: restore Swift 6 compatibility and hot reload functionality
- Fix Swift 6 concurrency issues with @MainActor and Sendable annotations
- Disable CloudKit in DEBUG builds to prevent simulator crashes
- Configure InjectionNext hot reload with proper directory watching
- Fix camera scanner data race issues
- Update various services for Swift 6 strict concurrency
- Add development tools and documentation
- Remove Swift 5.9 toolchain override

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,10 @@ frustratingResults.jpg
 tools/dev/InjectionIII.app/
 .build_counter
 .claude/.xcode-last-regen
+
+# Development tools
+tools/dev/XcodeBuildMCP/
+*.swp
+*.swo
+*~
+.DS_Store
