chore: update project configuration for UI tests
- Add NestoryUITests target with minimal Swift concurrency
- Configure UI test bundle with auto-generated Info.plist
- Update .gitignore for Fastlane artifacts
- Set SWIFT_STRICT_CONCURRENCY to minimal for UI tests
- Enable InjectionNext for hot reload support

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,13 @@ tools/dev/XcodeBuildMCP/
 *.swo
 *~
 .DS_Store
+
+# Fastlane
+fastlane/screenshots/
+fastlane/screenshots_archive/
+fastlane/test_output/
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/*.cer
+fastlane/*.mobileprovision
+fastlane/*.p12
