--- a/project.yml
+++ b/project.yml
@@ -106,7 +106,8 @@ targets:
         PRODUCT_BUNDLE_IDENTIFIER: com.nestory.UITests
         TEST_TARGET_NAME: Nestory
         GENERATE_INFOPLIST_FILE: YES
-        SWIFT_STRICT_CONCURRENCY: minimal
+        SWIFT_VERSION: 6.0
+        SWIFT_STRICT_CONCURRENCY: complete
         SWIFT_TREAT_WARNINGS_AS_ERRORS: NO
 
 schemes:
