feat: add complete App Store Connect configuration
- Add export compliance configuration (ITSAppUsesNonExemptEncryption)
- Create App Store Connect API services with JWT authentication
- Add comprehensive metadata files for app submission
- Configure Fastlane for automated deployment
- Add privacy policy and export compliance documentation
- Set up credentials management and verification scripts

The app is now fully configured for TestFlight deployment.

--- a/App-Main/Info.plist
+++ b/App-Main/Info.plist
@@ -59,5 +59,9 @@
         <string>com.nestory.sync</string>
         <string>com.nestory.cleanup</string>
     </array>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
+    <key>ITSEncryptionExportComplianceCode</key>
+    <string>3c7f3f8e-b5e6-4f8a-9d7c-8e5d4c3b2a1f</string>
 </dict>
 </plist>
