--- a/project.yml
+++ b/project.yml
@@ -24,15 +24,20 @@ settings:
     SWIFT_VERSION: 6.0
     DEVELOPMENT_TEAM: 2VXBQV4XC9
     CODE_SIGN_STYLE: Automatic
-    CURRENT_PROJECT_VERSION: 1
-    MARKETING_VERSION: 1.0.0
+    CURRENT_PROJECT_VERSION: 2
+    MARKETING_VERSION: 1.0.1
+    ENABLE_BITCODE: NO
+    DEBUG_INFORMATION_FORMAT: dwarf-with-dsym
+    ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
   configs:
     Debug:
       SWIFT_STRICT_CONCURRENCY: minimal
       SWIFT_TREAT_WARNINGS_AS_ERRORS: NO
       OTHER_SWIFT_FLAGS: "-Xfrontend -disable-availability-checking -suppress-warnings"
+      DEBUG_INFORMATION_FORMAT: dwarf-with-dsym
     Release:
       SWIFT_STRICT_CONCURRENCY: complete
+      DEBUG_INFORMATION_FORMAT: dwarf-with-dsym
 
 packages: {}
 
@@ -66,6 +71,9 @@ targets:
       
     resources:
       - path: App-Main/Assets.xcassets
+        buildPhase: resources
+      - path: App-Main/Preview Content/PreviewAssets.xcassets
+        buildPhase: resources
         
     settings:
       base:
@@ -73,6 +81,7 @@ targets:
         PRODUCT_BUNDLE_IDENTIFIER: com.nestory.app.dev
         INFOPLIST_FILE: App-Main/Info.plist
         ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
+        ASSETCATALOG_COMPILER_INCLUDE_ALL_APPICON_ASSETS: YES
         ENABLE_PREVIEWS: YES
         SWIFT_UPCOMING_FEATURE_CONCURRENCY: YES
         SWIFT_UPCOMING_FEATURE_EXISTENTIAL_ANY: YES
